# my_robot_description

./: CMakeLists.txt  package.xml
config/: rviz_config.rviz
launch/: load_robot_model.launch
urdf/: robot_arm_shape.urdf
