<?xml version="1.0"?>
<package format="2">
  <name>my_robot_description</name>
  <version>0.0.0</version>
  <description>The my_robot_description package</description>
  <author email="r.munninz@gmail.com">Ryan Munnings</author>
  <maintainer email="r.munninz@gmail.com">Ryan Munnings</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
  </export>
</package>
